[tool.poetry]
name = "BPMN-RPA"
version = "9.1.08"
description = "Robotic Process Automation by running BPMN diagram flows."
authors = ["Joost van Gils <joostvangils@1ic.nl>"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/joostvangils/BPMN_RPA"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
pypdf2 = ">=1.26.0"
requests = ">=2.25.1"
bs4 = ">=0.0.1"
beautifulsoup4 = ">=4.9.3"
selenium = ">=3.141.0"
xmltodict = ">=0.12.0"
lxml = ">=4.6.2"
pandas = ">=1.2.1"
urllib3 = ">=1.26.3"
python-dateutil = ">=2.8.1"
jira = ">=2.0.0"
PyAutoGUI = ">=0.9.52"
future = ">=0.18.2"
Pillow = ">=8.1.0"
pykeepass = ">=3.2.1"
PyJWT = ">=2.0.1"
msal = ">=1.9.0"
openai = ">=0.7.0"
pypiwin32 = ">=223"
pywin32 = ">=300"
psycopg2-binary = ">=2.8.6"
keyboard = ">=0.13.5"
uuid = ">=1.30"
pyodbc = ">=4.0.30"
matplotlib = ">=3.3.4"
spacy = ">=3.0.1"
tensorflow = ">=2.4.1"
exchangelib = ">=3.3.1"
defusedxml = ">=0.7.1"
Werkzeug = ">=1.0.1"
dill = ">=0.3.3"
setuptools = ">=54.1.2"

